<resources>
    <string name="app_name">weather_kotlin</string>
    <string name="loading">LOADING ...</string>
    <string name="try_again">Попробовать снова</string>
    <string name="check_internet">Проверьте интеренет</string>
    <string name="moscow">MOSCOW</string>
    <string name="_10">-10</string>
    <string name="_5">-5</string>
    <string name="feels_like">Ощущается как</string>
    <string name="cloudy">Облачно</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>